# docs/swagger.json
@@ -1,4 +1,7 @@
 {
+    "schemes": [
+        "http"
+    ],
     "swagger": "2.0",
     "info": {
         "description": "ITaM API",
@@ -6,7 +9,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "45.10.41.58:8080",
     "basePath": "/",
     "paths": {
         "/api/create_achievement": {
